--- a/Powerplant_energy_output.ipynb
+++ b/Powerplant_energy_output.ipynb
@@ -73,7 +73,7 @@
         "id": "SQ3pkLxJJl4A"
       },
       "source": [
-        "data_set = pd.read_csv('/content/Dataset_master.xlsx - Model Selection - Combined Cycl.csv')\n",
+        "data_set = pd.read_csv('energy.csv')\n",
         "X = data_set.iloc[:, :-1].values\n",
         "y = data_set.iloc[:, -1].values"
       ],
